# codesearch

./: .gitignore  README.md  main.py  pyproject.toml
codesearch/: __init__.py
codesearch/chunking/: __init__.py  chunkers.py  languages.py  repo_walker.py
codesearch/concurrency/: __init__.py  workstealing.py
codesearch/core/: __init__.py  models.py
codesearch/embedding/: __init__.py  embedder.py
codesearch/index/: __init__.py  job.py  merkle.py
codesearch/storage/: __init__.py  lancedb_writer.py  writer.py
codesearch/ui/: __init__.py  progress.py  tui.py
